# MytetsBot

./: .gitignore  README.md  main.py  phrases.db  pyproject.toml  test.ipynb
