[tool.poetry]
name = "mytetsbot"
version = "0.1.0"
description = "Інлайн-бот для Telegram з найкращими цитатами Леся Подерв'янського"
authors = ["Artem <63448341+Gilah-EnE@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
